--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,8 @@ requirements:
   host:
     - pip
     - python >=3.8
+    - setuptools >=46.4.0
+    - wheel
   run:
     - dwave-cloud-client >=0.10.6
     - click >5
